--- a/2-labbymezzage/labbymezzage.html
+++ b/2-labbymezzage/labbymezzage.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
  	<title>Labby Mezzage</title>
  	<link rel="stylesheet" type="text/css" href="labbystyle.css">
+ 	<link href='https://fonts.googleapis.com/css?family=Spicy+Rice' rel='stylesheet' type='text/css'>
 </head>
     <body>
         
